--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -4,3 +4,8 @@ kafka_bootstrap_servers=datanode1.release.yjp.com:9092,datanode2.release.yjp.com
 kudu_masters=master1.release.yjp.com:7051,master2.release.yjp.com:7051,master3.release.yjp.com:7051
 #kafka topic
 kafka_topic=test
+# hive的表名称
+table_name=yjp_dm_tag.dm_bizuser_tagdata_hive
+# 指定需要查询的开始分区(包含),默认截止到当前时间的前一天为止。如果不指定，则默认查询当前时间的前一天分区
+start_day=20200831
+
