--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
             <version>${spark.version}</version>
             <!--<scope>provided</scope>-->
         </dependency>
+        <!--mysql驱动包-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.35</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-sql_${scala.binary.version}</artifactId>
@@ -50,11 +56,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.61</version>
         </dependency>
-        <dependency>
+ <!--       <dependency>
             <groupId>org.json4s</groupId>
             <artifactId>json4s-jackson_2.11</artifactId>
             <version>3.2.11</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
     <repositories>
         <repository>
