--- a/src/main/resources/default.properties
+++ b/src/main/resources/default.properties
@@ -8,4 +8,6 @@ kafka_topic=test
 table_name=yjp_dm_tag.dm_bizuser_tagdata_hive
 # 指定需要查询的开始分区(包含),默认截止到当前时间的前一天为止。如果不指定，则默认查询当前时间的前一天分区
 start_day=20200831
+# kudu_table_name
+kudu_table_name=yjp_common.data_export_config
 
